data/Java/19-access-non-static-method/1/[M]Error.txt
https://stackoverflow.com/questions/290884/what-is-the-reason-behind-non-static-method-cannot-be-referenced-from-a-static
Program.java:9: error: non-static method someMethod() cannot be referenced from a static context
        java.util.List<String> someList = someMethod();
                                          ^